<resources>
    <string name="app_name">Goodiser</string>

    <string name="title_activity_login">Sign in</string>

    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>

    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>

    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>

    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_email_required">The email address is required</string>

    <string name="title_activity_feed">FeedActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_header_desc">Navigation header</string>

    <string name="notification">Incorrect Email or Password</string>

    <string name="forgot_password">Forgot Your Password?</string>
    <string name="forgot_password_msg">Don\'t worry. Just enter your email address below and we\'ll send you some instructions.</string>
    <string name="rest_password">Rest Password</string>
    <string name="rest_password_msg">Password Rest Email has been sent</string>
    <string name="rest_password_msg_error">Please enter a valid or existing email</string>


    <string name="google_login_button">Google Login Button</string>
    <string name="facebook_login_button">Facebook Login Button</string>

    <string name="sign_in_text">Already have an account?</string>
    <string name="sign_up_text">Don\'t have an account?</string>

    <string name="sign_in">SIGN IN</string>
    <string name="sign_up">SIGN UP</string>

    <string name="back">Back</string>

    <!-- Drawer Menu -->

    <string name="home">Home</string>
    <string name="notifications">Notifications</string>
    <string name="cart">Cart</string>
    <string name="wish_list">Wish List</string>
    <string name="history">History</string>

    <string name="settings">Settings</string>
    <string name="sign_out">Sign Out</string>

    <!-- Feed Menu -->

    <string name="about">About</string>

    <string name="apple">Apple</string>
    <string name="samsung">Samsung</string>
    <string name="microsoft">Microsoft</string>

    <string name="product_image">Product Image</string>
    <string name="product_title">Product Title</string>

    <!-- Facebook -->
    <string name="facebook_app_id">621074101666498</string>
    <string name="fb_login_protocol_scheme">fb621074101666498</string>





</resources>
